adapter improvements
